[package]
name = "semihosting-no-std-test-rt"
version = "0.0.0"
edition = "2021"
publish = false

[features]
qemu-system = []
qemu-user = []

# cfg(target_feature = "mclass") is not available on stable/beta.
[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabihf.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.base-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m-rt = "0.7"

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 merged in Rust 1.65 is not available on MSRV
