[package]
name = "semihosting-no-std-test-rt"
version = "0.0.0"
edition = "2021"
publish = false

[features]
qemu-system = ["aarch32-rt"]
qemu-user = []

# cfg(target_feature = "mclass") is not available on stable/beta.
[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabihf.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.base-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m-rt = "0.7"

# TODO: consider using aarch32-rt on other aarch32 targets
[target.'armv4t-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv5te-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv6-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv6-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv7a-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv7a-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv7r-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armv7r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armebv7r-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'armebv7r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'thumbv4t-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'thumbv5te-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }
[target.'thumbv6-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/rust-embedded/aarch32.git", rev = "885d39a" }

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 merged in Rust 1.65 is not available on MSRV
