[package]
name = "semihosting-no-std-test-rt"
version = "0.0.0"
edition = "2021"
publish = false

[features]
qemu-system = ["dep:aarch32-rt", "dep:cortex-m-rt"]
qemu-user = []
disable-link-check = []

# cfg(target_feature = "mclass") is not available on stable/beta.
# Armv4T
[target.'armv4t-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv4t-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
# Armv5TE
[target.'armv5te-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv5te-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
# Armv6
[target.'armv6-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'armv6-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv6-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
# Armv7-R
[target.'armv7r-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'armv7r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'armebv7r-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'armebv7r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv7r-none-eabi'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv7r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
# Armv8-R
[target.'armv8r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'armebv8r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
[target.'thumbv8r-none-eabihf'.dependencies]
aarch32-rt = { optional = true, git = "https://github.com/taiki-e/aarch32.git", rev = "8b1e01f" }
# Armv6-M
[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
# Armv7-M
[target.thumbv7m-none-eabi.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
[target.thumbv7em-none-eabi.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
[target.thumbv7em-none-eabihf.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
# Armv8-M
[target.'thumbv8m.base-none-eabi'.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
[target.'thumbv8m.main-none-eabi'.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }
[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m-rt = { optional = true, version = "0.7" }

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch,values("loongarch32"))', # 1.89+ https://github.com/rust-lang/rust/pull/142053
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 merged in Rust 1.65 is not available on MSRV
