[package]
name = "no-std-test"
version = "0.0.0"
edition = "2021"
publish = false

[features]
qemu-system = ["semihosting-no-std-test-rt/qemu-system"]
qemu-user = ["semihosting-no-std-test-rt/qemu-user"]
panic-unwind = ["semihosting/panic-unwind", "semihosting/backtrace", "linked_list_allocator", "spin"]
portable-atomic = ["semihosting/portable-atomic", "spin/portable_atomic"]

[dependencies]
semihosting = { path = "../..", features = ["stdio", "fs", "time", "args", "panic-handler"] }
semihosting-no-std-test-rt = { path = "../no-std-rt" }

# linked_list_allocator's LockedHeap uses spinning_top, but it doesn't compatible
# with targets without atomic CAS. Implement our own LockedHeap by using spin,
# which supports portable-atomic.
linked_list_allocator = { version = "0.10", optional = true, default-features = false }
spin = { version = "0.10", optional = true, default-features = false, features = ["spin_mutex"] }

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 merged in Rust 1.65 is not available on MSRV

[profile.dev]
opt-level = "s"

[profile.release]
